# gconfiglib

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
gconfiglib/: __init__.py  config.py  config_attribute.py  config_node.py  config_reader.py  config_root.py  config_writer.py  enums.py  globals.py  template_attr_base.py  template_attr_fixed.py  template_attr_variable.py  template_base.py  template_node_base.py  template_node_fixed.py  template_node_set.py  template_node_variable.py  utils.py
src/gconfiglib/: config.py  config_abcs.py  config_attribute.py  config_node.py  template_node_base.py  template_node_set.py  template_node_variable.py
tests/: Readme.md  import.conf_test  test_config.py  test_utils_cases  test_utils_empty  zk_hierarchy.json
